--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class = 'Header'>
             <h1>Joshua Gray</h1>
             <h2>BSc CS Student at The University of London</h2>
-            <a href="mailto:jgray2997@gmail.com">jgray2997@gmail.com</a>
+            <h3><a href="mailto:jgray2997@gmail.com">jgray2997@gmail.com</a></h3>
         </div>
 
 
