project page update

--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <button id="back-button"><a id="back-button"href="index.html">Back</a></button>
 
     <div class="grid-container">
         <div class="grid-item" id="left">
@@ -20,6 +21,11 @@
                 <h2 class="details">Computer Science Student</h2>
                 <h2 class="details">University of London</h2>
                 <h2 class="details">Rhode Island, USA</h2>
+            </div>
+            <div class="project-links">
+                <a class="link" href="" target="_blank" style="text-decoration: line-through">Download Resume</a>
+                <a class="link" href="https://github.com/joshhgray" target="blank">GitHub</a>
+                <a class="link" href="https://www.linkedin.com/in/joshua-gray-916a93241/" target="blank">LinkedIn</a>
             </div>
         </div>
         <div class="grid-item" id="right">
@@ -65,7 +71,7 @@
                 </p>
                 
                 <h2 class="resume-header">Certificates</h2>
-                <p class="resume-text">Google IT Professional Certificate</p>
+                <a href="https://www.coursera.org/account/accomplishments/professional-cert/KA7H2QLVS7GV" target="blank" class="resume-text">Google IT Professional Certificate</a>
             </div>
             
 
