--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="menu">
             <div id="menu-items">
                 <a href="resume.html" class="menu-item">Resume</a>
-                <a href="/" class="menu-item">Projects</a>
+                <a href="projects.html" class="menu-item">Projects</a>
                 <a href="/" class="menu-item">About Me</a>
                 <a href="/" class="menu-item">Contact</a>
             </div>
