--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Joshua Gray</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
         <meta name="description" content="Joshua Gray - Computer Science Student at The University of London">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta naem="refresh" content="600">
     </head>
 
     <body>
-        <div class = 'Header'>
-            <h1>Joshua Gray</h1>
-            <h2>BSc CS Student at The University of London</h2>
-            <a href="mailto:jgray2997@gmail.com">jgray2997@gmail.com</a>
+
+        <div id="menu">
+            <div id="menu-items">
+                <a href="resume.html" class="menu-item">Resume</a>
+                <a href="projects.html" class="menu-item">Projects</a>
+                <a href="about.html" class="menu-item">About Me</a>
+                <a href="contact.html" class="menu-item">Contact</a>
+            </div>
+            <div id="menu-background-pattern"></div>
+            <div id="menu-background-image"></div>
         </div>
 
-
-
-
-        <div class = 'Footer'>
-
-        </div>
 
     </body>
 
