--- a/projects.html
+++ b/projects.html
@@ -11,14 +11,14 @@
 
 <body>
     <button id="back-button"><a id="back-button"href="index.html">Back</a></button>
-    <div id="page-title"><h1>My Projects</h1></div>
+    <div id="page-title"><h1>School Projects</h1></div>
 
     <div id="projects-container">
         <div class="project-card">
             <div class="project-pic "id="mvpic"></div>
             <div class="project-title"><h2>Music Visualization Web App</h2> </div>
             <div class="project-links">
-                <a class="link" href="https://github.com/joshhgray/Music-Viz" target="_blank">GitHub</a>
+                <a class="link" href="https://github.com/joshhgray/Music-Viz" target="_blank"style="text-decoration: line-through">GitHub</a>
                 <a class="link" href="" style="text-decoration: line-through">Try it out</a>
             </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="project-pic" id="chesspic"></div>
             <div class="project-title"><h2>Website for 2022 Chess Olymiad</h2></div>
             <div class="project-links">
-                <a class="link" href="https://github.com/joshhgray/web-dev-final-" target="_blank">GitHub</a>
+                <a class="link" href="https://github.com/joshhgray/web-dev-final-" target="_blank"style="text-decoration: line-through">GitHub</a>
                 <a class="link" href="" style="text-decoration: line-through">Try it out</a>
             </div>
 
@@ -37,7 +37,7 @@
             <div class="project-pic" id="p5runner"></div>
             <div class="project-title"><h2>p5.js 2D Runner Game</h2></div>
             <div class="project-links">
-                <a class="link" href="https://github.com/joshhgray/ITP1-final-project" target="_blank">GitHub</a>
+                <a class="link" href="https://github.com/joshhgray/ITP1-final-project" target="_blank"style="text-decoration: line-through">GitHub</a>
             </div>
 
         </div>
