--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="resume.html" class="menu-item">Resume</a>
                 <a href="projects.html" class="menu-item">Projects</a>
                 <a href="/" class="menu-item">About Me</a>
-                <a href="/" class="menu-item">Contact</a>
+                <a href="contact.html" class="menu-item">Contact</a>
             </div>
             <div id="menu-background-pattern"></div>
             <div id="menu-background-image"></div>
