--- a/resume.html
+++ b/resume.html
@@ -27,24 +27,18 @@
 
         
         <p class="resume-title"><strong>Surv, </strong>Newport, RI - Lead Laborer</p>
-        <p class="resume-date">May 2022 - Present</p>
-        <p class="resume-subtext">Help out local residents with painting, moving, landscaping, event help, junk removal and odd jobs. Building stronger communities and creating lasting meaningful relationships with customers. </p>
+        <p class="resume-date">May 2022 - Aug 2023</p>
+        <p class="resume-subtext">Assisted local residents with a range of services including painting, moving, landscaping, event assistance, junk removal, and varius odd jobs. </p>
+        <p class="resume-subtext">Played an instrumental role in building stronger communites by fostering meaninful relationships and ensuring customer satisfaction</p>
+        <p class="resume-subtext">Recognized as a dependable and proactive team member, consistently going the extra mile</p>
+        <p class="resume-subtext">Acted as a mentor, teaching and guiding new workers in learning the trade and ensuring best practices were maintained.</p>
 
         <h2 class="resume-header">Education</h2>
         <p class="resume-title"><strong>University of London</strong></p>
         <p class="resume-date">Oct 2021 - Present</p>
-        <p class="resume-subtext">Working towards Bachelor Degree in Computer Science</p>
+        <p class="resume-subtext">Working towards a BSc in Computer Science with specialism in Machine Learning and Artificial Intelligence</p>
         <p class="resume-subtext">4.0 GPA</p>
 
-        <p class="resume-title"><strong>North Kingstown High School</strong></p>
-        <p class="resume-date">2011 - 2015</p>
-        <p class="resume-subtext">3.4 GPA</p>
-
-        <h2 class="resume-header">Languages</h2>
-        <p class="resume-text">HTML/CSS/JS</p>
-        <p class="resume-text">Python</p>
-        <p class="resume-text">C++</p>
-        
         <h2 class="resume-header">Awards</h2>
         <p class="resume-subtext">Associate of the Quarter (HomeGoods) Q1 2015, Q1 2019, Q4 2020
         </p>
